# dwarf2pdb

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DWARF5_PDB_MATCH.md  FIRST_IMPLEMENTATION.md  LICENSE  NODES.md  README.md  TEST_STRUCTURE.md
doc/: COMPILER_SETUP.md  GETTING_STARTED.md  LIBRARY_SETUP.md  LIBRARY_USAGE_EXAMPLES.md  TESTING_GUIDE.md
it/dwarf/: DWARF_IT,md  test_dwarf_integration.cpp
it/pdb/: test_pdb_integration.cpp
script/: download_tool_libs.cmake  setup_clang64_env.bat  setup_gcc32_env.bat  setup_msvc_env.bat  test_library_setup.bat  test_library_setup.sh
src/: main.cpp
src/dwarf/: DwarfNode.cpp  DwarfNode.h  DwarfReader.cpp  DwarfReader.h  DwarfWriter.cpp  DwarfWriter.h
src/ir/: IRMaps.cpp  IRMaps.h  IRNode.cpp  IRNode.h  IRTypeTable.cpp  IRTypeTable.h
src/pdb/: PdbNode.cpp  PdbNode.h  PdbReader.cpp  PdbReader.h  PdbWriter.cpp  PdbWriter.h
src/pipeline/: DwarfToPdb.cpp  DwarfToPdb.h  PdbToDwarf.cpp  PdbToDwarf.h
src/util/: Compare.cpp  Compare.h
st/: SYSTEM_TEST.md  test_system_pipeline.cpp
ut/: test_roundtrip_dwarf.cpp  test_roundtrip_pdb.cpp
